--- a/src/index.html
+++ b/src/index.html
@@ -98,67 +98,67 @@
 		
 		        <!--Grid column-->
 		        <div class="col-lg-4 col-md-12 mb-4">
-		
-		            <div class="view overlay z-depth-1-half">
-		                <img src="assets/images/hyderabad.jpg" class="img-fluid" alt="">
-		                <div class="mask rgba-white-slight"></div>
-		            </div>
-		
-		            <h4 class="my-4 font-weight-bold">Vizag</h4>
-		            <p class="grey-text">Hyerabad to Vizag</p>
-	                <div class="row">
-			            <div class="col-md-4">
-			            	<h4><span class="badge badge-success"><i class="fa fa-inr" aria-hidden="true"></i>&nbsp;1200+</span></h4>
+					<div class="card">
+			            <div class="view overlay z-depth-1-half">
+			                <img src="assets/images/vizag.jpg" class="card-img-top" alt="">
+			                <div class="mask rgba-white-slight"></div>
 			            </div>
-			            <div class="col-md-8">
-			            	<a href="#" class="btn btn-primary waves-light" mdbWavesEffect>Search Buses</a>
-			            </div>
-	               </div> 
-		
+			
+			            <h4 class="my-4 font-weight-bold">Vizag</h4>
+			            <p class="grey-text">Hyerabad to Vizag</p>
+		                <div class="row">
+				            <div class="col-md-4">
+				            	<h4><span class="badge badge-success"><i class="fa fa-inr" aria-hidden="true"></i>&nbsp;1200+</span></h4>
+				            </div>
+				            <div class="col-md-8">
+				            	<a href="#" class="btn btn-primary waves-light" mdbWavesEffect>Search Buses</a>
+				            </div>
+		               </div> 
+					</div>
 		        </div>
 		        <!--Grid column-->
 		
 		        <!--Grid column-->
 		        <div class="col-lg-4 col-md-12 mb-4">
-		
-		            <div class="view overlay z-depth-1-half">
-		                <img src="assets/images/hyderabad.jpg" class="img-fluid" alt="">
-		                <div class="mask rgba-white-slight"></div>
-		            </div>
-		
-		            <h4 class="my-4 font-weight-bold">Hyderabad</h4>
-		            <p class="grey-text">Hyderabad to Hyderabad</p>
-		            <div class="row">
-			            <div class="col-md-4">
-			            	<h4><span class="badge badge-success"><i class="fa fa-inr" aria-hidden="true"></i>&nbsp;800+</span></h4>
+					<div class="card">
+			            <div class="view overlay z-depth-1-half">
+			                <img src="assets/images/hyderabad.jpg" class="card-img-top" alt="">
+			                <div class="mask rgba-white-slight"></div>
 			            </div>
-			            <div class="col-md-8">
-			            	<a href="#" class="btn btn-primary waves-light" mdbWavesEffect>Search Buses</a>
-			            </div>
-	               </div> 
-		
+			
+			            <h4 class="my-4 font-weight-bold">Hyderabad</h4>
+			            <p class="grey-text">Hyderabad to Hyderabad</p>
+			            <div class="row">
+				            <div class="col-md-4">
+				            	<h4><span class="badge badge-success"><i class="fa fa-inr" aria-hidden="true"></i>&nbsp;800+</span></h4>
+				            </div>
+				            <div class="col-md-8">
+				            	<a href="#" class="btn btn-primary waves-light" mdbWavesEffect>Search Buses</a>
+				            </div>
+		               </div> 
+					</div>
 		        </div>
 		        <!--Grid column-->
 		
 		        <!--Grid column-->
 		        <div class="col-lg-4 col-md-6 mb-4">
-		
-		            <div class="view overlay z-depth-1-half">
-		                <img src="assets/images/banglore.jpg" class="img-fluid" alt="">
-		                <div class="mask rgba-white-slight"></div>
-		            </div>
-		
-		            <h4 class="my-4 font-weight-bold">Banglore</h4>
-		            <p class="grey-text">Hyderabd to Banglore</p>
-	                <div class="row">
-			            <div class="col-md-4">
-			            	<h4><span class="badge badge-success"><i class="fa fa-inr" aria-hidden="true"></i>&nbsp;1000+</span></h4>
+					<div class="card">
+			            <div class="view overlay z-depth-1-half">
+			                <img src="assets/images/banglore.jpg" class="card-img-top" alt="">
+			                <div class="mask rgba-white-slight"></div>
 			            </div>
-			            <div class="col-md-8">
-			            	<a href="#" class="btn btn-primary waves-light" mdbWavesEffect>Search Buses</a>
-			            </div>
-	               </div> 
-		
+			
+			            <h4 class="my-4 font-weight-bold">Banglore</h4>
+			            <p class="grey-text">Hyderabd to Banglore</p>
+		                <div class="row">
+				            <div class="col-md-4">
+				            	<h4><span class="badge badge-success"><i class="fa fa-inr" aria-hidden="true"></i>&nbsp;1000+</span></h4>
+				            </div>
+				            <div class="col-md-8">
+				            	<a href="#" class="btn btn-primary waves-light" mdbWavesEffect>Search Buses</a>
+				            </div>
+		               </div> 
+					</div>
 		        </div>
 		        <!--Grid column-->
 		
@@ -181,7 +181,7 @@
 		
 		        <!--Grid column-->
 		        <div class="col-md-4 mb-1">
-		            <i class="fa fa-map-marker fa-4x orange-text"></i>
+		            <i class="fa fa-map-marker fa-4x red-text"></i>
 		            <h4 class="my-4">Live Tracking</h4>
 		            <p>Let your friends and family track your journey in real time using LiveTrack on <b>pryanam</b>.
 		            Invite your friends and family via email or Facebook. 
@@ -191,7 +191,7 @@
 		
 		        <!--Grid column-->
 		        <div class="col-md-4 mb-1">
-		            <i class="fa fa-eye-slash fa-4x orange-text"></i>
+		            <i class="fa fa-eye-slash fa-4x cyan-text"></i>
 		            <h4 class="my-4">Virtual Tour</h4>
 		            <p>Take a virtual tour of the bus you want to travel. Get the feeling of how your travel is going to be before you even book.</p>
 		        </div>
@@ -199,8 +199,8 @@
 		        
 		        <!--Grid column-->
 		        <div class="col-md-4 mb-1">
-		            <i class="fa fa-heart fa-4x orange-text"></i>
-		            <h4 class="my-4">Happiness</h4>
+		            <i class="fa fa-comments-o fa-4x orange-text"></i>
+		            <h4 class="my-4">Support</h4>
 		            <p>100% Customer satisfaction and always try to offer lowest price with better options.</p>
 		        </div>
 		        <!--Grid column-->
